<resources>
    <string name="app_name">Depok Single Window</string>
    <string name="all_login">Login</string>
    <string name="all_email">Email</string>
    <string name="all_password">Password</string>
    <string name="all_forgotpassword">Lupa Password</string>
    <string name="all_confirm">Konfirmasi</string>
    <string name="all_registration">Registrasi</string>
    <string name="all_fullname">Nama Lengkap</string>
        <string name="all_nickname">Nama Pendek</string>
    <string name="all_gender">Jenis Kelamin</string>
        <string name="all_pekerjaan">Pekerjaan Anda</string>
    <string name="all_phonenumber">No Handphone</string>
    <string name="all_depokresidences">Penduduk Depok</string>
    <string name="all_notdepokresidences">Bukan Penduduk Depok</string>
    <string name="all_nik">NIK</string>
    <string name="all_address">Alamat</string>
    <string name="all_province">Provinsi</string>
    <string name="all_kabupaten">Kabupaten</string>
    <string name="all_kecamatan">Kecamatan</string>
    <string name="all_kelurahan">Kelurahan</string>
    <string name="all_postalcode">Kodepos</string>
    <string name="all_register">Daftar</string>
    <string name="all_male">Pria</string>
    <string name="all_female">Wanita</string>
    <string name="all_back">Kembali</string>
    <string name="all_search">Cari</string>
    <string name="all_submit">Kirim</string>
    <string name="all_save">Simpan</string>
    <string name="all_westjava">Jawa Barat</string>
    <string name="all_depok">Depok</string>
    <string name="all_next">Berikutnya</string>
    <string name="all_menuPanggilanDarurat">Darurat</string>
    <string name="all_menuPBB">PBB</string>
    <string name="all_menuBPHTB">BPHTB</string>
    <string name="all_menuLayananPerizinan">Perizinan</string>
    <string name="all_menuLayananKesehatan">Kesehatan</string>
    <string name="all_menuPertanyaanDanAspirasi">Aspirasi</string>
    <string name="all_menuPengaduan">Pengaduan</string>
    <string name="all_menuContactCenter">Contact</string>
    <string name="all_menuPengaturan">Pengaturan</string>
    <string name="all_menuLayananPendidikan">Pendidikan</string>
    <string name="all_menuLayananZakat">Zakat</string>
    <string name="all_menuPetaDepok">Peta</string>
    <string name="all_menuLayananRSS">Berita</string>
    <string name="all_menuInfoKemacetan">Lalu Lintas</string>
    <string name="all_menuCuacaDepok">Cuaca</string>
    <string name="all_menuLowonganKerja">Loker</string>
    <string name="all_menuPLNdanPDAM">PDAM &amp; PLN</string>
    <string name="all_inputnomorpajak">Masukkan nomor pajak Anda</string>
    <string name="all_nop">NOP</string>
    <string name="all_forminputinfo">Silakan mengisi formulir yang tersedia</string>
    <string name="all_category">Kategori</string>
    <string name="all_message">Pesan</string>
    <string name="all_addfile">Tambah File</string>
    <string name="all_takephoto">Ambil Foto</string>
    <string name="all_opengallery">Buka Galeri</string>
    <string name="all_attachfile">Lampirkan File</string>
    <string name="all_attachfileinfo">File yang dapat dilampirkan berupa doc, docx, xls, xlsx, pdf</string>
    <string name="all_fillquestionoraspiration">Isi Aspirasi atau Pertanyaan</string>
    <string name="all_logout">Logout</string>
    <string name="all_ok">Oke</string>
    <string name="all_cancel">Batal</string>
    <string name="all_fieldrequired">Harus diisi</string>
    <string name="all_datarequired">Data harus diisi dengan benar</string>
    <string name="all_errorconnection">Periksa koneksi internet anda</string>
    <string name="all_errorwriteandcameradenied">Aplikasi memerlukan akses untuk menulis perangkat penyimpanan dan akses ke kamera</string>
    <string name="all_errorreadpermissiondenied">Aplikasi memerlukan akses untuk membaca perangkat penyimpanan</string>
    <string name="all_errorcameranotavailable">Kamera tidak tersedia</string>
    <string name="all_errorinvalidemail">Format email tidak valid</string>
    <string name="all_errorLocationPermissionDenied">Aplikasi memerlukan akses lokasi</string>
    <string name="all_errorGPSTurnedOff">Aplikasi memerlukan akses GPS. Mohon aktifkan GPS anda.</string>
    <string-array name="gender">
        <item>@string/all_gender</item>
        <item>@string/all_female</item>
        <item>@string/all_male</item>
    </string-array>
    <string-array name="depok_residences">
        <item>@string/all_depokresidences</item>
        <item>@string/all_notdepokresidences</item>
    </string-array>
    <string-array name="aspiration_categories">
        <item>Pilih Kategori</item>
        <item>Permintaan Informasi</item>
        <item>Izin Usaha</item>
        <item>Kebersihan</item>
        <item>Jalan</item>
        <item>Taman</item>
        <item>Pendidikan</item>
        <item>Kesehatan</item>
        <item>PBB</item>
        <item>Transportasi Umum</item>
        <item>Kebakaran</item>
        <item>Lainnya</item>
        <item>Banjir</item>
        <item>Parkir Liar</item>
        <item>Wabah Penyakit</item>
        <item>Pohon Tumbang</item>
        <item>Monitoring</item>
    </string-array>
    <string name="onboarding_next">Berikutnya</string>
    <string name="onboarding_skip">Lewati</string>
    <string name="onboarding_dologin">Lakukan Login</string>
    <string name="onboarding_gotomain">Masuk ke Menu utama</string>
    <string name="onboardingslidepage_title1">Panggilan Darurat</string>
    <string name="onboardingslidepage_body1">Akses mudah panggilan darurat untuk kejadian/musibah tak terduga</string>
    <string name="onboardingslidepage_title2">Cek PBB, BPHTB, Perizinan</string>
    <string name="onboardingslidepage_body2">Pengecekan PBB, BPHTB, dan proses perizinan Anda secara online dengan satu langkah mudah</string>
    <string name="onboardingslidepage_title3">Jadi Masyarakat Aktif</string>
    <string name="onboardingslidepage_body3">Suarakan inspirasi, aspirasi, keluhan, dan pengaduan tentang lingkungan Anda dan seputar pelayanan publik</string>
    <string name="login_depok">Depok</string>
    <string name="login_singlewindow">Single Window</string>
    <string name="login_forgotpassword">Lupa password</string>
    <string name="login_donthaveaccount">Belum punya akun? Daftar di sini</string>
    <string name="login_registerhere">Daftar di sini</string>
    <string name="login_loginfailed">Login gagal</string>
    <string name="login_loginsuccess">Login berhasil</string>
    <string name="forgotpassword_guide">Silakan masukkan email Anda, kami akan mengirimkan password baru ke alamat email Anda.</string>
    <string name="register_guide">Isilah dengan data yang benar</string>
    <string name="register_agreement">Dengan menekan tombol Daftar Anda berarti menyetujui semua peraturan dalam penggunaan aplikasi ini</string>
    <string name="register_registersuccess">Registrasi berhasil</string>
    <string name="register_registerfailed">Registrasi gagal</string>
    <string name="home_depokpraytime">Waktu sholat untuk wilayah Depok</string>
    <string name="home_subuh">Subuh</string>
    <string name="home_dzuhur">Dzuhur</string>
    <string name="home_ashar">Ashar</string>
    <string name="home_maghrib">Maghrib</string>
    <string name="home_isya">Isya</string>
    <string name="cekpbb_tagihanpbb">Lihat PBB Anda</string>
    <string name="cekpbb_informasipbb">Info PBB</string>
        <string name="cekpbb_infopembayaranpbb">Info Pembayaran PBB</string>
    <string name="tagihanpbb_cekpbbnow">Cek PBB Anda sekarang!</string>
    <string name="tagihanpbb_info1">-Melakukan cek nilai PBB</string>
    <string name="tagihanpbb_info2">-Melihat riwayat status pembayaran PBB</string>
    <string name="cekbphtb_cekbhtbnow">Cek BPHTB Anda sekarang!</string>
    <string name="cekbphtb_info1">-Melakukan cek nilai BPHTB</string>
    <string name="cekbphtb_info2">-Melihat riwayat status pembayaran BPHTB</string>
    <string name="cekbphtb_cekbphtb">Lihat BPHTB Anda</string>
    <string name="cekbphtb_infobphtb">Info BPHTB</string>
    <string name="cekbphtb_infopembayaranbphtb">Info Pembayaran BPHTB</string>
    <string name="layananperizinan_lacakperizinan">Lihat Status Perizinan Anda</string>
    <string name="layananperizinan_informasiperizinan">Info Perizinan</string>
    <string name="layananperizinan_perizinanonline">Perizinan Online</string>
        <string name="layanancallcenter_contactcenterdepok">Contact Center Depok</string>
        <string name="layanancallcenter_contactopd">Info Kontak OPD</string>
    <string name="lacakperizinan_lacakperizinan">Lacak perizinan Anda</string>
    <string name="lacakperizinan_inputtokennumber">Masukkan nomor token Anda</string>
    <string name="lacakperizinan_tokennumber">Nomor Token</string>
    <string name="layanankesehatan_newpatien">Pasien Baru</string>
    <string name="layanankesehatan_oldpatien">Pasien Lama</string>
    <string name="layanankesehatan_registerqueue">Registrasi Puskesmas</string>
    <string name="layanankesehatan_healthcareserviceinformation">Info Kesehatan</string>
        <string name="layanankesehatan_healtnews">Berita Kesehatan</string>
    <string name="layananpendidikan_schoolregister">Data Sekolah Depok</string>
    <string name="layananpendidikan_passinggrade">Lihat Passing Grade</string>
    <string name="layananpendidikan_schoolinformation">Info Pendidikan</string>
    <string name="layananpendidikan_ppdb">Informasi PPDB</string>
    <string name="layananpendidikan_schoolcalendar">Kalender Pendidikan</string>
    <string name="layananzakat_pembayaranzakat">Layanan Pembayaran Zakat</string>
    <string name="layananzakat_infopembayaranzakat">Info Zakat</string>
    <string name="peta_depok">Peta Depok</string>
    <string name="rss_depok">Berita Seputar Depok</string>
    <string name="pembayaranpln">Cek Pembayaran PLN</string>
    <string name="infopln">Informasi PLN</string>
        <string name="pln">PLN</string>
    <string name="infopdam">Info Layanan PDAM</string>
        <string name="registerpdam">Registrasi PDAM</string>
        <string name="registerpdam_pelangganlama">Registrasi Pelanggan Lama</string>
        <string name="registerpdam_pelangganbaru">Registrasi Pelanggan Baru</string>
        <string name="pdam">PDAM</string>
        <string name="jaringanlayananpdam">Jaringan Layanan PDAM</string>
        <string name="tagihanpdam">Cek Tagihan PDAM</string>
        <string name="infopembayaran">Info Pembayaran</string>
        <string name="simulasi">Simulasi Tagihan</string>
        <string name="bni">BNI</string>
        <string name="mandiri">Mandiri</string>
        <string name="bca">BCA</string>
        <string name="ppobdanbanklain">PPOB &amp; Bank Lainnya</string>
        <string name="kelompoktarif">Kelompok Tarif</string>
        <string name="tipshemat">Tips Hemat Air</string>
        <string name="hakdankewajiban">Hak &amp; Kewajiban Pelanggan</string>
        <string name="keluhannonpelanggan">Keluhan Non Pelanggan</string>
        <string name="keluhanpelanggan">Keluhan Pelanggan</string>
    <string name="oldpatient_queueregister">Pendaftaran Antrian</string>
    <string name="oldpatient_inputqueuedata">Isi data Antrian</string>
    <string name="oldpatient_choosepuskesmas">PILIH PUSKESMAS</string>
    <string name="oldpatient_chooseservice">PILIH LAYANAN</string>
    <string name="oldpatinet_medicalrecnumber">Nomor Rekam Medis</string>
    <string name="questionandaspiration_headerinfo">Aspirasi dan pertanyaan Anda membantu kami menjadi lebih baik</string>
    <string name="questionandaspiration_createnewquestion">Buat Pertanyaan &amp; Aspirasi Baru</string>
    <string name="complaintpage_createnewcomplaint">Buat Aspirasi Baru</string>
    <string name="complaintpage_headerinfo">Laporkan keluhan Anda agar kami dapat membantu Anda</string>
    <string name="complaintpage_cancelattachimage">Batal tambah foto</string>
</resources>