<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="id.depok.depoksinglewindow.ui.questionandaspiration.QuestionAndAspirationActivity">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbarlayout_questionandaspiration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_questionandaspiration"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <View
            android:id="@+id/view_questionandaspiration_headercontainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/darkGrey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appbarlayout_questionandaspiration"
            app:layout_constraintBottom_toBottomOf="@+id/textview_questionandaspiration_headertitle"/>

        <TextView
            android:id="@+id/textview_questionandaspiration_headertitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/questionandaspiration_headerinfo"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingStart="@dimen/padding_menu_horizontalmargin"
            android:paddingEnd="@dimen/padding_menu_horizontalmargin"
            style="@style/MenuItem"
            app:layout_constraintTop_toBottomOf="@+id/appbarlayout_questionandaspiration"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageview_questionandaspiration_headericon"/>

        <ImageView
            android:id="@+id/imageview_questionandaspiration_headericon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_linewhite_aspirasi"
            android:layout_marginStart="@dimen/padding_menu_horizontalmargin"
            android:layout_marginEnd="@dimen/margin_icon_leftmargin"
            app:layout_constraintTop_toTopOf="@+id/view_questionandaspiration_headercontainer"
            app:layout_constraintBottom_toBottomOf="@+id/view_questionandaspiration_headercontainer"
            app:layout_constraintEnd_toEndOf="parent"/>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/view_questionandaspiration_headercontainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <android.support.v7.widget.CardView
            android:id="@+id/cardview_oldpatientqueue_inputcardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:layout_constraintTop_toBottomOf="@id/view_questionandaspiration_headercontainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp">

                <TextView
                    android:id="@+id/textview_questionandaspiration_inputtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all_forminputinfo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/textview_questionandaspiration_categorylabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/all_category"
                    android:layout_marginTop="20dp"
                    style="@style/LabelStyle"
                    app:layout_constraintTop_toBottomOf="@+id/textview_questionandaspiration_inputtitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <Spinner
                    android:id="@+id/spinner_questionandaspiration_categoryspinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@id/textview_questionandaspiration_categorylabel"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/textview_questionandaspiration_messagelabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/all_message"
                    android:layout_marginTop="20dp"
                    style="@style/LabelStyle"
                    app:layout_constraintTop_toBottomOf="@+id/spinner_questionandaspiration_categoryspinner"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edittext_questionandaspiration_message"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:minHeight="80dp"
                    app:layout_constraintTop_toBottomOf="@+id/textview_questionandaspiration_messagelabel"
                    android:hint="@string/all_fillquestionoraspiration"
                    android:inputType="textMultiLine"
                    android:gravity="top"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/textview_questionandaspiration_addfilelabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/LabelStyle"
                    android:text="@string/all_addfile"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/edittext_questionandaspiration_message"
                    />

                <Button
                    android:id="@+id/button_questionandaspiration_takephotobutton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:theme="@style/GreenButton"
                    android:text="@string/all_takephoto"
                    android:layout_marginEnd="5dp"
                    app:layout_constraintTop_toBottomOf="@+id/textview_questionandaspiration_addfilelabel"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/button_questionandaspiration_opengallerybutton"/>

                <Button
                    android:id="@+id/button_questionandaspiration_opengallerybutton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:theme="@style/GreenButton"
                    android:text="@string/all_opengallery"
                    app:layout_constraintTop_toBottomOf="@+id/textview_questionandaspiration_addfilelabel"
                    app:layout_constraintStart_toEndOf="@id/button_questionandaspiration_takephotobutton"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <Button
                    android:id="@+id/button_questionandaspiration_attachfilebutton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:theme="@style/RedButton"
                    android:text="@string/all_attachfile"
                    app:layout_constraintTop_toBottomOf="@+id/button_questionandaspiration_takephotobutton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/textview_questionandaspiration_attachfileinfo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/all_attachfileinfo"
                    android:textSize="13sp"
                    app:layout_constraintTop_toBottomOf="@+id/button_questionandaspiration_attachfilebutton"/>

                <Button
                    android:id="@+id/button_questionandaspiration_submitbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/all_submit"
                    android:theme="@style/BlueButton"
                    app:layout_constraintTop_toBottomOf="@+id/textview_questionandaspiration_attachfileinfo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <Button
                    android:id="@+id/button_questionandaspiration_backbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all_back"
                    android:theme="@style/GreyButton"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintTop_toTopOf="@+id/button_questionandaspiration_submitbutton"
                    app:layout_constraintEnd_toStartOf="@id/button_questionandaspiration_submitbutton"/>

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

    </ScrollView>

    </android.support.constraint.ConstraintLayout>

</layout>

