<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="id.depok.depoksinglewindow.ui.forgotpassword.ForgotPasswordActivity"
        android:background="@drawable/bg_get_start">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_forgotpassword"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textview_forgotpassword_title"
            style="@style/PageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/all_forgotpassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_forgotpassword"/>

        <TextView
            android:id="@+id/textview_forgotpassword_guide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_page_horizontalmargin"
            android:layout_marginEnd="@dimen/margin_page_horizontalmargin"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_forgotpassword_title"
            android:text="@string/forgotpassword_guide"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textinputlayout_forgotpassword_emailtextinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_page_horizontalmargin"
            android:layout_marginEnd="@dimen/margin_page_horizontalmargin"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_forgotpassword_guide">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edittext_forgotpassword_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/all_email"
                android:inputType="textEmailAddress"
                android:lines="1"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_forgotpassword_confirmbutton"
            android:theme="@style/MainButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textinputlayout_forgotpassword_emailtextinput"
            android:text="@string/all_confirm"/>

    </android.support.constraint.ConstraintLayout>

</layout>
