<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageButton
        android:id="@+id/button_login_closebutton_sigap"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="@dimen/size_close_button"
        android:layout_height="@dimen/size_close_button"
        android:layout_marginEnd="3dp"
        android:layout_marginTop="3dp"
        android:src="@drawable/icon_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageview_login_loginlogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="57dp"
        android:src="@drawable/icon_lineblue_pengaduan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login_closebutton_sigap" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textinputlayout_login_emailtextinput_sigap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageview_login_loginlogo">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edittext_login_email_sigap"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/all_email"
            android:inputType="textEmailAddress"
            android:lines="1"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textinputlayout_login_passwordtextinput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textinputlayout_login_emailtextinput_sigap">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edittext_login_password_sigap"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/all_password"
            android:inputType="textPassword"
            android:lines="1"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_login_loginbutton_sigap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/all_login"
        android:theme="@style/MainButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textinputlayout_login_passwordtextinput"
        android:layout_marginTop="25dp"/>

    <TextView
        android:visibility="gone"
        android:id="@+id/textview_login_forgotpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/login_forgotpassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login_loginbutton_sigap"
        android:layout_marginTop="5dp"
        android:textColor="@color/softRed"/>

    <TextView
        android:id="@+id/textview_login_donthaveaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:visibility="gone"
        android:text="@string/login_donthaveaccount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_login_forgotpassword"
        app:layout_constraintVertical_bias="0.62" />



</android.support.constraint.ConstraintLayout>